--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -5,8 +5,6 @@
 <div class="page-header">
   <h1>Terminology Converter Dashboard</h1>
 </div>
-<%= render 'layouts/filter_table_poll_results', filter_id: 'tc_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poll: 'poll' %>
-
 <%
   locals = {}
   fields = {}
@@ -22,8 +20,9 @@
   locals['fields'] = fields
   locals['poll_key'] = 'polling.pollEnum.CONVERTER'
   locals['poll_route'] = 'gon.routes.terminology_converter_load_build_data_path'
-  locals['check_poll_route'] = 'gon.routes.terminology_converter_check_polling_path'
 %>
+
+<%= render 'layouts/filter_table_poll_results', filter_id: 'tc_filter_rows', filter_label: 'Filter Results', include_all_rows: true, poller: locals['poll_key'] %>
 
 <%= render 'jenkins_check_build/job_data_table', locals: locals %>
 
