--- a/app/views/vuid/_vuid_results_tbody.html.erb
+++ b/app/views/vuid/_vuid_results_tbody.html.erb
@@ -1,4 +1,4 @@
-<% if @results %>
+<% if @results && ! @results.empty? %>
   <% @results.each do |row| %>
     <tr>
       <td><%= display_time(row.request_datetime ) %></td>
