added clearTimeout code for polling when unregistering a poller and added auto_activate property (default true) to registerPoller allowing the user to not activate the poller when registering by passing false. This is used on the home page because the job_queue and log events pollers are activated based on the tab selection

--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -93,6 +93,6 @@
           filterRowLimit,
           loadJobQueueTable
       );
-      PollMgr.registerPoller(job_queue_poller);
+      PollMgr.registerPoller(job_queue_poller, false, false);
   });
 </script>
