--- a/app/views/welcome/_job_queue.html.erb
+++ b/app/views/welcome/_job_queue.html.erb
@@ -32,57 +32,64 @@
     var tbody = $('#table-data').find('tbody');
     tbody.empty();
 
-    $.each(data, function (index, item) {
-      // create the row adding a data-job_id attribute
-      var row = $('<tr>').addClass('text-top').attr('data-job_id', item['job_id']);
+    if (data.length > 0) {
+        $.each(data, function (index, item) {
+            // create the row adding a data-job_id attribute
+            var row = $('<tr>').addClass('text-top').attr('data-job_id', item['job_id']);
 
-      $.each(fields, function (index, field) {
-        var item_value = item[field + ''];
+            $.each(fields, function (index, field) {
+                var item_value = item[field + ''];
 
-        if (field === 'status') {
-          var row_status = $('<td>').text(gon.job_status_constants[item_value]);
+                if (field === 'status') {
+                    var row_status = $('<td>').text(gon.job_status_constants[item_value]);
 
-          if (item_value === <%= PrismeJobConstants::Status::STATUS_HASH[:QUEUED] %> ||
-              item_value === <%= PrismeJobConstants::Status::STATUS_HASH[:RUNNING] %>) {
-            row_status.prepend($('<i class="fa fa-cog fa-fw fa-spin" aria-hidden="true"></i>'));
-          }
-          row.append(row_status);
-        } else if (field === 'execution_times') {
-          //'scheduled_at', 'enqueued_at', 'started_at', 'completed_at',
-          row.append($('<td>').css('text-align', 'right').html("Enqueued At:<br>Scheduled At:<br>Started At:<br>Completed At:"));
+                    if (item_value === <%= PrismeJobConstants::Status::STATUS_HASH[:QUEUED] %> ||
+                        item_value === <%= PrismeJobConstants::Status::STATUS_HASH[:RUNNING] %>) {
+                        row_status.prepend($('<i class="fa fa-cog fa-fw fa-spin" aria-hidden="true"></i>'));
+                    }
+                    row.append(row_status);
+                } else if (field === 'execution_times') {
+                    //'scheduled_at', 'enqueued_at', 'started_at', 'completed_at',
+                    row.append($('<td>').css('text-align', 'right').html("Enqueued At:<br>Scheduled At:<br>Started At:<br>Completed At:"));
 
-          // times formatted with  <br>s
-          var times = 'Not Yet Enqueued<br>';
+                    // times formatted with  <br>s
+                    var times = 'Not Yet Enqueued<br>';
 
-          if (item['enqueued_at'] !== null) {
-            times = moment(item['enqueued_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
-          }
+                    if (item['enqueued_at'] !== null) {
+                        times = moment(item['enqueued_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+                    }
 
-          if (item['scheduled_at'] !== null) {
-            times += moment(item['scheduled_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
-          } else {
-            times += 'Not Yet Scheduled<br>'
-          }
+                    if (item['scheduled_at'] !== null) {
+                        times += moment(item['scheduled_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+                    } else {
+                        times += 'Not Yet Scheduled<br>'
+                    }
 
-          if (item['started_at'] !== null) {
-            times += moment(item['started_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
-          } else {
-            times += 'Not Yet Started<br>'
-          }
+                    if (item['started_at'] !== null) {
+                        times += moment(item['started_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+                    } else {
+                        times += 'Not Yet Started<br>'
+                    }
 
-          if (item['completed_at'] !== null) {
-            times += moment(item['completed_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
-          } else {
-            times += 'Not Yet Completed<br>'
-          }
-          row.append($('<td>').html(times));
-        }
-        else {
-          row.append($('<td>').text(item_value));
-        }
-      });
-      tbody.append(row);
-    });
+                    if (item['completed_at'] !== null) {
+                        times += moment(item['completed_at']).format('YYYY-MM-DD [at] HH:mm:ss') + '<br>';
+                    } else {
+                        times += 'Not Yet Completed<br>'
+                    }
+                    row.append($('<td>').html(times));
+                }
+                else {
+                    row.append($('<td>').text(item_value));
+                }
+            });
+            tbody.append(row);
+        });
+    } else {
+        var row = $('<tr>').addClass('text-top');
+        var td = '<td colspan="7" class="text-center" scope="col">There are no items to list...</td>';
+        row.append(td);
+        tbody.append(row);
+    }
   }
 
   $(document).ready(function (e) {
